# MPIPartition

./: .buildinfo  .bumpversion.cfg  .flake8  .gitignore  .toml  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  index.html  mypy.ini  objects.inv  pyproject.toml  searchindex.js  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pypi.yml  sphinx.yml  tests.yml
1_cartesian_partition/: index.html
2_s2_partition/: index.html
_modules/: index.html
_modules/mpipartition/distribute/: index.html
_modules/mpipartition/exchange/: index.html
_modules/mpipartition/overload/: index.html
_modules/mpipartition/partition/: index.html
_modules/mpipartition/spherical_partition/s2_distribute/: index.html
_modules/mpipartition/spherical_partition/s2_overload/: index.html
_modules/mpipartition/spherical_partition/s2_partition/: index.html
_sources/: 1_cartesian_partition.rst.txt  2_s2_partition.rst.txt  index.rst.txt
_static/: documentation_options.js
branch/allow_southpole/: .buildinfo  index.html  objects.inv  searchindex.js
branch/allow_southpole/2_s2_partition/: index.html
branch/allow_southpole/_modules/: index.html
branch/allow_southpole/_modules/mpipartition/distribute/: index.html
branch/allow_southpole/_modules/mpipartition/exchange/: index.html
branch/allow_southpole/_modules/mpipartition/overload/: index.html
branch/allow_southpole/_modules/mpipartition/partition/: index.html
branch/allow_southpole/_modules/mpipartition/spherical_partition/s2_distribute/: index.html
branch/allow_southpole/_modules/mpipartition/spherical_partition/s2_partition/: index.html
branch/allow_southpole/_sources/: index.rst.txt
branch/allow_southpole/_static/: documentation_options.js
branch/allow_southpole/contributing/: index.html
branch/allow_southpole/search/: index.html
branch/spherical_partition/: .buildinfo  index.html  objects.inv  searchindex.js
branch/spherical_partition/_modules/: index.html
branch/spherical_partition/_modules/mpipartition/distribute/: index.html
branch/spherical_partition/_modules/mpipartition/exchange/: index.html
branch/spherical_partition/_modules/mpipartition/overload/: index.html
branch/spherical_partition/_modules/mpipartition/partition/: index.html
branch/spherical_partition/_static/: documentation_options.js
branch/spherical_partition/contributing/: index.html
branch/spherical_partition/genindex/: index.html
branch/spherical_partition/mpipartition/: index.html
branch/spherical_partition/search/: index.html
contributing/: index.html
docs/: 1_cartesian_partition.rst  2_s2_partition.rst  Makefile  conf.py  index.rst  make.bat  mpipartition.rst
examples/: distributing.py  overloading.py  partitioning.py
genindex/: index.html
mpipartition/: __init__.py  _send_home.py  distribute.py  exchange.py  index.html  overload.py  partition.py
mpipartition/scripts/: s2_prediction.py
mpipartition/spherical_partition/: __init__.py  s2_distribute.py  s2_overload.py  s2_partition.py
search/: index.html
tests/: __init__.py  test_distribute.py  test_exchange.py  test_overload.py  test_partition.py  test_s2_distribute.py  test_s2_overload.py  test_s2_partition.py
